[project]
name = 'listok'
readme = 'README.md'
description = 'quick note-taking terminal app'
license = 'MIT'
dependencies = []
dynamic = ['version']

[project.scripts]
listok = 'listok.__main__:cli'
note = 'listok.__main__:cli'

[project.optional-dependencies]
dev = ['ruff']

[tool.ruff]
line-length = 79
[tool.ruff.format]
quote-style = 'single'
[tool.ruff.lint]
extend-select = ['I', 'E501']

[tool.hatch.version]
path = 'src/listok/__version__.py'

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'
