[project]
name = 'listok'
readme = 'README.md'
description = 'interproject note consolidator'
license = 'MIT'
dynamic = ['version']

[project.scripts]
listok = 'listok.__main__:cli'

[project.optional-dependencies]
dev = ['ruff', 'faterunner']

[tool.ruff]
line-length = 79
[tool.ruff.format]
quote-style = 'single'
[tool.ruff.lint]
extend-select = ['I', 'E501']

[tool.faterunner.targets]
check = ['ruff check .', 'ruff format --check .']
format = ['ruff check --fix .', 'ruff format .']

[tool.hatch.version]
path = 'src/listok/__version__.py'

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'
